put boarder around images so blank images stand out.

--- a/dj/main/templates/imgs.html
+++ b/dj/main/templates/imgs.html
@@ -7,19 +7,30 @@
 
 {% block content %}
 
-<form method="POST">{% csrf_token %}{{ iefs.management_form }}
+<table border="5" style="border-color: gray" >
 
 {% for img,form in imgsfs %}
-
-  <a href="{% url "admin:main_image_file_change" img.id%}">
-    <img alt="recording sheet" src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=800 >
-</a>
+<tr><td border="5" style="border-color: gray" >
+start 
+  <a href="{% url "admin:main_image_file_change" img.id%}">{{img.id}}</a>
+    <img alt="recording sheet" src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=800 border="5" style="border-color: gray" >
   </br>
-{{form}} <input type="submit" value="{{user.is_authenticated|yesno:"Save,not logged in,"}}" />
+  <form method="POST">{% csrf_token %}{{ iefs.management_form }}
+      <table>{{form}} </table><input type="submit" value="{{user.is_authenticated|yesno:"Save,not logged in,"}}" />
+  </form>
+  <a href="{% url "admin:main_image_file_change" img.id%}">
   </br>
     {{img.text}}
   </br>
+  <a href="{% url "admin:main_image_file_delete" img.id%}">
+      /admin/main/episode/10212/delete/
+  </a>
+  </div>
   <hr>
+
+  end
+    </td></tr>
 {% endfor %}
+</table>
 
 {% endblock %}
