Move image zoomer code local.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -4,8 +4,8 @@
 {% block head %}
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://formstone.it/components/Zoomer/jquery.fs.zoomer.js"></script>
-<link href="http://formstone.it/components/Zoomer/jquery.fs.zoomer.css" rel="stylesheet">
+<script src="{{STATIC_URL}}Zoomer/jquery.fs.zoomer.js"></script>
+<link href="{{STATIC_URL}}Zoomer/jquery.fs.zoomer.css" rel="stylesheet">
 <link href="{{STATIC_URL}}css/hideme.css" rel="stylesheet">
 <title>veyepar: {{episode.name}}</title>
 {% endblock %}
