Use chapter data to construct youtube URLs to jump to start of chapters, like titled Lighting Talks.

--- a/dj/main/templates/episode_chaps.html
+++ b/dj/main/templates/episode_chaps.html
@@ -35,7 +35,7 @@
 
 {% for chap in chaps %}
   {% if chap.0 %}
-  {{chap.3}} ({{chap.0.1}})  {{chap.2.comment}}<br/>
+ * [({{chap.0}})]({{chap.2}})  {{chap.1.comment}}<br/>
   {%endif%}
 {%endfor%}
 
