--- a/dj/main/templates/episode_chaps.html
+++ b/dj/main/templates/episode_chaps.html
@@ -9,29 +9,15 @@
 
 {{episode.name}}  <br/>
 
+<p> <hr>
+
 {% for chap in chaps %}
-  {% if chap.0 %}
-    {{chap.0.1}},
+  {% if chap.0 and chap.1.comment %}
+ * [({{chap.0}})]({{chap.2}})  {{chap.1.comment}}<br/>
   {%endif%}
 {%endfor%}
 
-<hr>
-
-{% for chap in chaps %}
-  {% if chap.0 %}
-     ({{chap.0.1}})  {{chap.2.comment}}<br/>
-  {%endif%}
-{%endfor%}
-
-<hr>
-
-{% for chap in chaps %}
-  {% if chap.0 %}
-     ({{chap.0.1}})  {{chap.2.comment}}<br/>
-  {%endif%}
-{%endfor%}
-
-<hr>
+<p> <hr>
 
 {% for chap in chaps %}
   {% if chap.0 %}
@@ -39,7 +25,16 @@
   {%endif%}
 {%endfor%}
 
+<p> <hr>
 
+{% for chap in chaps %}
+  {% if chap.0 %}
+     ({{chap.0}}) {{chap.1.comment}}<br/>
+  {%endif%}
+{%endfor%}
+
+
+<p> <hr>
 
 
 {% endblock %}
