Show lightning talk titles as chapters.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -181,6 +181,8 @@ $(".viewer").zoomer();
 
   <input type="checkbox" id="cl-{{forloop.counter0}}" class="cl-showmore"> <label class="cl-summary" for="cl-{{forloop.counter0}}">show more...</label>
 
+  {{cl.comment}}
+
   <div class="cl-detail">
       {{clrfform.clid}}
 
