--- a/dj/main/templates/episode_chaps.html
+++ b/dj/main/templates/episode_chaps.html
@@ -28,6 +28,14 @@
 <p> <hr>
 
 {% for chap in chaps %}
+  {% if chap.3 %}
+  * [({{chap.0}})]({{chap.2}})  {{chap.1.comment}} {{chap.3}}<br/>
+  {%endif%}
+{%endfor%}
+
+<p> <hr>
+
+{% for chap in chaps %}
   {% if chap.0 %}
      ({{chap.0}}) {{chap.1.comment}}<br/>
   {%endif%}
