--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -6,10 +6,9 @@
 
 <script type="text/javascript" src="{{STATIC_URL}}admin/js/urlify.js"></script>
 
-<script type="text/javascript" src="http://researchcompendia.org/static/js/jquery.cookie.js"></script>
-
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery.cookie.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
 
@@ -21,7 +20,7 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login_form.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/main.css">
-<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.min.css">
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery-ui.min.css">
 
 </head>
 <body>
