keep original raw ext.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -194,7 +194,7 @@ $(".viewer").zoomer();
       <td>
        <video
           id="rawfile{{ cl.id }}"
-          src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.webm"
+          src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.webm"
           controls
           preload="metadata"
           width=400
