Show wall clock time of clip in/out points.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -220,6 +220,7 @@ $(".viewer").zoomer();
                     {{ clrfform.start }}
                     <input type="button" id="grab-start-{{cl.id}}" value="grab">
                     {{chap.0}}
+                    {{chap.3.0 | date:"H:i:s"}}
                 </td>
             </tr>
 
@@ -242,6 +243,7 @@ $(".viewer").zoomer();
                     {{ clrfform.end }}
                     <input type="button" id="grab-end-{{cl.id}}" value="grab">
                     {{chap.1}}
+                    {{chap.3.1 | date:"H:i:s"}}
                 </td>
             </tr>
 
