--- a/dj/main/templates/episodes_table.html
+++ b/dj/main/templates/episodes_table.html
@@ -26,7 +26,7 @@
  <td> <a href="/databrowse/main/episode/fields/start/{{episode.start|date:"Y-m-d H:i:s"}}"> {{episode.start|date:"D d H:i"}} </a> </td>
  <td>{{episode.end|date:"H:i"}}</td>
         <td>{{episode.duration}}</td>
-        <td>{{episode.state}}</td>
+        <td>{{episode.state}}{{episode.locked|yesno:"*, "}}</td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
         <td style="white-space:normal">{{episode.authors}}</td>
         <td>{{episode.released}}</td>
