default new show to last show

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -46,7 +46,10 @@
 
 <tr>
     <td><a href="{% url "admin:main_episode_changelist" %}?show__id__exact={{show.id}}&locked__isnull=False">locked episodes admin</a></td>
-    <td><a href="{% url "admin:main_raw_file_changelist" %}?show__id__exact={{show.id}}">Raw_File admin</a></td>
+    <td>
+        <a href="{% url "admin:main_raw_file_changelist" %}?show__id__exact={{show.id}}">raw_File admin</a>
+        <a href="{% url "admin:main_mark_changelist" %}?show__id__exact={{show.id}}">mark admin</a>
+    </td>
 <tr> </tr>
 <tr> </tr>
 </tr>
