make VLC start at the cut start.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -192,7 +192,7 @@ $(".viewer").zoomer();
   <div class="cl-detail">
       {{clrfform.clid}}
 
-      ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}
+      ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}} :start-time=0{{cl.start}}
       <table>
       <tr>
       <td>
