support both webm and mp4 previews.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -196,14 +196,15 @@ $(".viewer").zoomer();
       <table>
       <tr>
       <td>
-       <video
-          id="rawfile{{ cl.id }}"
-          src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.mp4"
+       <video id="rawfile{{ cl.id }}"
           controls
           preload="metadata"
           width=400
           {# poster="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.png" #}
-          ></video>
+          >
+          <source src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.mp4" type="video/mp4">
+          <source src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.webm" type="video/webm">
+       </video>
       </td>
 
       <td>
