don't error when there are no cuts yet.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -53,7 +53,7 @@
     </td>
     <td> </td>
     <td> 
-        <a href="{% url "veyepar_cfg" client.slug show.slug%}">veyepar.cfg</a>
+        <a href="{% url "veyepar_cfg" %}">veyepar.cfg</a>
     </td>
 </tr>
 <tr>{% include "show_shortcuts.html" %}</tr>
