--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -112,6 +112,7 @@ Admin:
 <a href="{% url "admin:main_episode_change" episode.id%}">episode</a>
 <a href="{% url "admin:main_cut_list_changelist" %}?episode__id__exact={{episode.id}}">cut list</a>
 <a href="{% url "admin:main_raw_file_changelist" %}?location__id__exact={{episode.location.id}}&amp;start__year={{episode.start|date:"Y"}}&amp;start__month={{episode.start|date:"m"}}&amp;start__day={{episode.start|date:"d"}}">raw files day</a>
+<a href="{% url "admin:main_mark_changelist" %}?location__id__exact={{episode.location.id}}&amp;start__year={{episode.start|date:"Y"}}&amp;start__month={{episode.start|date:"m"}}&amp;start__day={{episode.start|date:"d"}}">marks day</a>
 <a href="{% url "admin:main_image_file_changelist" %}?episodes__id__exact={{episode.id}}">image_files</a>
 
 {%if episode.host %}
